--- a/apuntes.tex
+++ b/apuntes.tex
@@ -8,6 +8,7 @@
 \usepackage{listings}
 \usepackage{upquote}  %% para meter acentos libres en los listings (`)
 \usepackage{amsmath}  %% para meter texto en formulas con \text
+\usepackage{setspace}  %% Para tunear el espaciado del índice
 
 \setlength{\parskip}{0.5em}
 
@@ -42,13 +43,19 @@
 
 
 
-\title{Apuntes sobre Inteligencia artificial}
+\title{Apuntes sobre inteligencia artificial}
 \author{Sergio de Mingo}
 \date{6 de Febrero de 2026}
 
 
 \begin{document}
 \maketitle
+
+\begin{spacing}{0.3}
+\tableofcontents
+\end{spacing}
+
+\vspace{1cm}
 
 \section{El perceptrón}
 
@@ -85,7 +92,7 @@ y = f\!\left( \sum_{i=1}^{n} w_i x_i + b \right)
 La limitación de este algoritmo es que si dibujamos en un gráfico estos
 elementos, se deben poder separar con un hiperplano únicamente los
 elementos «deseados» discriminándolos (separándolos) de los «no
-deseados». Esto lo veremos mejor en el punto \ref*{multicapa}, donde
+deseados». Esto lo veremos mejor en el punto \ref{multicapa}, donde
 estudiaremos una Red Neuronal Clásica (Multilayer Perceptron). Este tipo
 no es más que muchas de estas neuronas organizadas en capas: una de
 entrada, una o varias ocultas y una de salida.
@@ -581,52 +588,52 @@ fuente y su simbología matemática utilizada en el desarrollo:
 
 \begin{itemize}
 \item
-  \texttt{X} (\(X\)) Matriz de Entrada: Los 4 casos del XOR
+  \texttt{X}: (\(X\)) Matriz de Entrada: Los 4 casos del XOR
   (\(4 \times 2\)).
 \item
-  \texttt{y} (\(y\)) Etiquetas Reales: Los resultados deseados
+  \texttt{y}: (\(y\)) Etiquetas Reales: Los resultados deseados
   (\(4 \times 1\)).
 \item
-  \texttt{W1,\ W2} (\(W_1, W_2\)) Matrices de Pesos: Las conexiones
+  \texttt{W1,\ W2}: (\(W_1, W_2\)) Matrices de Pesos: Las conexiones
   entre capas.
 \item
-  \texttt{b1,\ b2} (\(b_1, b_2\)) Vectores de Sesgo (Bias): El umbral de
+  \texttt{b1,\ b2}: (\(b_1, b_2\)) Vectores de Sesgo (Bias): El umbral de
   activación.
 \item
-  \texttt{hidden\_layer\_output} (\(A_1\)) Activación Oculta: La salida
+  \texttt{hidden\_layer\_output}: (\(A_1\)) Activación Oculta: La salida
   de la capa intermedia.
 \item
-  \texttt{predicted\_output} (\(A_2\) o \(\hat{y}\)) Predicción Final:
+  \texttt{predicted\_output}: (\(A_2\) o \(\hat{y}\)) Predicción Final:
   La salida de la red.
 \item
-  \texttt{error} (\(y - A_2\)) Error Residual: Diferencia bruta entre
+  \texttt{error}: (\(y - A_2\)) Error Residual: Diferencia bruta entre
   realidad y predicción.
 \item
-  \texttt{d\_predicted\_output} (\(\delta_2\) o Delta 2) Gradiente de
+  \texttt{d\_predicted\_output}: (\(\delta_2\) o Delta 2) Gradiente de
   Salida: Error de salida multiplicado por la derivada.
 \item
-  \texttt{error\_hidden\_layer} (\(E_{hidden}\)) Error Retropropagado:
+  \texttt{error\_hidden\_layer}: (\(E_{hidden}\)) Error Retropropagado:
   El error que ``rebota'' hacia la capa oculta.
 \item
-  \texttt{d\_hidden\_layer} (\(\delta_1\) o Delta 1) Gradiente Oculto:
+  \texttt{d\_hidden\_layer}: (\(\delta_1\) o Delta 1) Gradiente Oculto:
   El error en la capa oculta listo para ajustar \(W_1\).
 \item
-  \texttt{learning\_rate} (\(\eta\)) Tasa de Aprendizaje: El factor de
+  \texttt{learning\_rate}: (\(\eta\)) Tasa de Aprendizaje: El factor de
   escala de los ajustes.
 \end{itemize}
 
 
 
-\section{Anotaciones}
+%% \section{Anotaciones}
 
-\begin{itemize}
-\item
-  Matriz Traspuesta: Una \textbf{matriz traspuesta} es aquella en donde
-  el elemento a j i \(a_{ji}\) de la matriz original A \(A\) se
-  convertirá en el elemento a i j \(a_{ij}\) de la matriz traspuesta A t
-  \(A^{t}\). Dicho de otra manera, donde intercambiamos las columnas por
-  filas.
-\end{itemize}
+%% \begin{itemize}
+%% \item
+%%   Matriz Traspuesta: Una \textbf{matriz traspuesta} es aquella en donde
+%%   el elemento a j i \(a_{ji}\) de la matriz original A \(A\) se
+%%   convertirá en el elemento a i j \(a_{ij}\) de la matriz traspuesta A t
+%%   \(A^{t}\). Dicho de otra manera, donde intercambiamos las columnas por
+%%   filas.
+%% \end{itemize}
 
 
 \end{document}
