implemento red xor en pytorch

--- a/apuntes.tex
+++ b/apuntes.tex
@@ -1166,9 +1166,12 @@ mucho más rápido y sin romperse la cabeza ajustando la tasa de
 aprendizaje manualmente.
 
 
-{\bf Práctica propuesta}:
+{\bf Prácticas propuestas}:
 
 \begin{enumerate}
+\item Realiza una implementación de la Red XOR de la sección anterior pero
+  usando PyTorch: (Hecho en \texttt{src/multicapa-ptorch.py}
+
 \item
   Modifica la arquitectura: Añade una tercera capa oculta de 32
   neuronas.
