meto saltos de página y limpio makefile

--- a/apuntes.tex
+++ b/apuntes.tex
@@ -224,6 +224,7 @@ for t in X:
 \end{codigo}
 
 
+\newpage
 \section{Redes multicapa}\label{multicapa}
 
 Si recordamos el razonamiento del punto anterior donde definíamos en un
@@ -264,7 +265,7 @@ función lineal, por muchas capas que pongamos, la red seguiría siendo
 una simple combinación lineal (una sola línea recta). La no-linealidad
 es lo que permite ``curvar'' el espacio necesario para este caso.
 
-\begin{figure}
+\begin{figure}[h]
 \centering
 \includegraphics[scale=0.6]{./img/esquema.png}
 \caption{Esquema general de la red multicapa}
@@ -680,18 +681,12 @@ al fondo pero está rebotando un poco en las paredes del valle.
 
 
 
-%% \section{Anotaciones}
-
-%% \begin{itemize}
-%% \item
-%%   Matriz Traspuesta: Una \textbf{matriz traspuesta} es aquella en donde
-%%   el elemento a j i \(a_{ji}\) de la matriz original A \(A\) se
-%%   convertirá en el elemento a i j \(a_{ij}\) de la matriz traspuesta A t
-%%   \(A^{t}\). Dicho de otra manera, donde intercambiamos las columnas por
-%%   filas.
-%% \end{itemize}
 
 
+
+
+
+\newpage
 \section{Reconocimiento de patrones}
 
 Hasta ahora, tu red solo ha tenido que distinguir entre 4 combinaciones.
@@ -1198,7 +1193,7 @@ aprendizaje manualmente.
 
 
 
-
+\newpage
 \section{Redes Neuronales Convolucionales}
 
 Anteriormente aplanamos una imagen de 28×28 a 784. Al hacer eso, la red
@@ -1616,7 +1611,7 @@ permitiendo que la red cree conceptos cada vez más abstractos}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
+\newpage
 \section{Bibliografía recomendada}
 
 \begin{itemize}
