--- a/apuntes.tex
+++ b/apuntes.tex
@@ -808,7 +808,7 @@ usaremos la derivada de ReLU.
 
 
 
-\subsection{ReLU y el gradiente desvanesciente}
+\subsection{ReLU y el gradiente desvanesciente}\label{desvanecimiento}
 
 El paso de Sigmoide a ReLU (Rectified Linear Unit) es, probablemente, el
 avance más sencillo pero más importante que permitió que las redes
